css/style.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
  line-height: 1.5;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  background-color: #e8f7ff;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='1' y2='0'%3E%3Cstop offset='0' stop-color='%230FF'/%3E%3Cstop offset='1' stop-color='%23CF6'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%23F00'/%3E%3Cstop offset='1' stop-color='%23575CFF'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23FFF' fill-opacity='0' stroke-miterlimit='10'%3E%3Cg stroke='url(%23a)' stroke-width='2'%3E%3Cpath transform='translate(0 0)' d='M1409 581 1450.35 511 1490 581z'/%3E%3Ccircle stroke-width='4' transform='rotate(0 800 450)' cx='500' cy='100' r='40'/%3E%3Cpath transform='translate(0 0)' d='M400.86 735.5h-83.73c0-23.12 18.74-41.87 41.87-41.87S400.86 712.38 400.86 735.5z'/%3E%3C/g%3E%3Cg stroke='url(%23b)' stroke-width='4'%3E%3Cpath transform='translate(0 0)' d='M149.8 345.2 118.4 389.8 149.8 434.4 181.2 389.8z'/%3E%3Crect stroke-width='8' transform='rotate(0 1089 759)' x='1039' y='709' width='100' height='100'/%3E%3Cpath transform='rotate(0 1400 132)' d='M1426.8 132.4 1405.7 168.8 1363.7 168.8 1342.7 132.4 1363.7 96 1405.7 96z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
  background-size: cover;
  height: 100vh;
}

/* NAV BAR */

.nb-logo {
  width: 50px;
}

.nb-left {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 1rem 3rem;
}

.nb-right {
  display: flex;
  justify-content: center;
  align-items: center;
}

.nb-heading {
  font-size: 2rem;
  padding-left: 1rem;
  background: rgb(234, 76, 59);
  background: linear-gradient(
    135deg,
    rgba(234, 76, 59, 1) 56%,
    rgba(252, 193, 17, 1) 85%
  );
  background-size: 100%;
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  font-weight: 700;
}

.nav-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: black;
  flex-wrap: wrap;
}

.nb-home,
.nb-about {
  padding-left: 3rem;
  padding-right: 3rem;
}

.nav-bar a {
  text-decoration: none;
  font-weight: 700;
  background: rgb(234, 76, 59);
  background: linear-gradient(
    135deg,
    rgba(234, 76, 59, 1) 56%,
    rgba(252, 193, 17, 1) 85%
  );
  background-size: 100%;
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  font-size: 2rem;
  padding-bottom: 0.2rem;
}

.nav-bar a:hover {
  font-size: 2.5rem;
  transition: font-size 0.5s ease;
}

.nb-logout {
  padding: 1rem;
  margin-left: 2rem;
  margin-right: 1rem;
  background: red;
  color: white;
  font-weight: 700;
  font-size: 1.5rem;
  outline: 0;
  border: 1px solid red;
  border-radius: 5px;
  cursor: pointer;
}

.nb-logout:hover {
  padding: 1.5rem;
  transition: padding 0.5s ease;
}

.nb-open {
  font-size: 3rem;
  background: rgb(234, 76, 59);
  background: linear-gradient(
    135deg,
    rgba(234, 76, 59, 1) 56%,
    rgba(252, 193, 17, 1) 85%
  );
  background-size: 100%;
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  margin: 10px;
  display: none;
  cursor: pointer;
}

.nb-close {
  font-size: 3rem;
  display: none;
  cursor: pointer;
}

@media screen and (max-width: 700px) {
  .nb-right {
    height: 50vh;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 10;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background: black;
    transition: top 1s ease;
    display: none;
  }

  .nb-close {
    display: block;
    background: rgb(234, 76, 59);
    background: linear-gradient(
      135deg,
      rgba(234, 76, 59, 1) 56%,
      rgba(252, 193, 17, 1) 85%
    );
    background-size: 100%;
    background-clip: text;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
    position: absolute;
    top: 20px;
    right: 20px;
  }

  .nb-open {
    display: block;
    margin-right: 2rem;
  }

  .nav-bar a {
    margin-top: 2rem;
  }

  .nb-logout {
    margin-top: 2rem;
    margin-left: 3rem;
  }

  .nb-logo {
    width: 50px;
  }

  .nb-heading {
    font-size: 2rem;
  }
}

/* Hero Component */

.hero {
  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    url(../images/intro.webp);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 60%;
  box-shadow: 0 0 20px #000;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media screen and (max-width: 500px) {
  .hero {
    background-position: 50% 75%;
  }
}

.hero-heading,
.hero-name {
  text-align: center;
  background: rgb(234, 76, 59);
  background: linear-gradient(
    135deg,
    rgba(234, 76, 59, 1) 56%,
    rgba(252, 193, 17, 1) 85%
  );
  background-size: 100%;
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  font-weight: 700;
  font-size: 5rem;
  margin-bottom: 2rem;
}

.hero-para {
  text-align: center;
  background: rgb(234, 76, 59);
  background: linear-gradient(
    135deg,
    rgba(234, 76, 59, 1) 56%,
    rgba(252, 193, 17, 1) 85%
  );
  background-size: 100%;
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  font-size: 2rem;
  font-weight: 700;
  padding: 2rem;
}

.name-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}
.nameform-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.name-heading {
  background: rgb(234, 76, 59);
  background: linear-gradient(
    135deg,
    rgba(234, 76, 59, 1) 56%,
    rgba(252, 193, 17, 1) 85%
  );
  background-size: 100%;
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  font-size: 5rem;
  font-weight: 700;
  text-align: center;
  margin-bottom: 2rem;
}

.name-input {
  outline: 0;
  border: 0;
  border-radius: 5px;
  padding: 2rem 3.5rem;
}
.name-input::placeholder {
  color: orange;
}

.name-submit {
  font-weight: 700;
  border: 1px solid #ccc;
  border-radius: 5px;
  padding: 2rem 3rem;
  color: black;
  margin-left: 2rem;
}

.name-submit-green {
  background-color: rgb(139, 216, 23);
  color: #fff;
}

.name-form {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

@media screen and (min-width: 950px) {
  .hero {
    justify-content: flex-start;
    height: 70%;
  }

  .name-container,
  .nameform-container {
    align-items: flex-start;
    margin-left: 10rem;
  }

  .hero-heading {
    font-size: 6rem;
  }

  .hero-para {
    text-align: start;
    font-size: 4rem;
  }
}

@media screen and (max-width: 450px) {
  .name-form {
    flex-direction: column;
  }

  .name-input {
    margin-bottom: 2rem;
  }
}

.check {
  margin: 8rem 3rem;
  text-align: center;
  background: rgb(234, 76, 59);
  background: linear-gradient(
    135deg,
    rgba(234, 76, 59, 1) 56%,
    rgba(252, 193, 17, 1) 85%
  );
  background-size: 100%;
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  word-wrap: break-word;
  font-size: 4rem;
}

.grid {
  display: flex;
  justify-content: center;
  align-items: center;
}

.grid-container {
  display: grid;
  grid-template: 15rem 23rem 10rem / 30rem;
  grid-template-areas: "logo" "instruction" "start";
  border-radius: 1.5rem;
  background: rgb(234, 76, 59);
  background: linear-gradient(
    135deg,
    rgba(234, 76, 59, 1) 56%,
    rgba(252, 193, 17, 1) 85%
  );
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
}

.logo-container {
  grid-area: logo;
  display: flex;
  justify-content: center;
  align-items: center;
}

.logo {
  width: 50%;
  height: 100%;
}

.instruction-container {
  grid-area: instruction;
}
.instuction-container {
  padding: 0 1rem;
  margin: 5rem 1rem 0rem;
  border: 2px solid #fff;
  background-color: #330033;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23404' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23505'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-size: cover;
}

.instruction-heading {
  color: #fff;
  font-size: 2rem;
  text-align: center;
  margin-bottom: 2rem;
}

.instructions {
  padding-left: 2.3rem;
  padding-right: 1rem;
}

.instruction {
  list-style-type: none;
  list-style-image: url(../images/tick.svg);
  color: #fff;
  font-weight: 700;
  padding-bottom: 2rem;
}

.start-container {
  grid-area: start;
  display: flex;
  justify-content: center;
  align-items: center;
}

.start-link {
  text-decoration: none;
  border: 2px solid rgb(231, 68, 68);
  border-radius: 5px;
  padding: 1rem 2rem;
  font-size: 2rem;
  color: white;
  font-weight: 700;
  background: rgb(231, 68, 68);
  cursor: pointer;
}

.start-link:hover {
  border-color: rgb(139, 216, 23);
  background-color: rgb(139, 216, 23);
}

